--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-web": "~0.18.9",
-    "react-native-maps": "1.3.2"
+    "react-native-maps": "1.3.2",
+    "expo-location": "~15.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
