--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.8",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
